将项目重构为多模块项目